# IRIS

./: ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE.md  MAINTAINERS.md  Makefile  NOTICE.md  OGL_LICENSE.md  README.md  SECURITY.md  UNINSTALL.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
address-profiling-pipeline/: Makefile
backend/: Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements-private.txt
backend/api/: config.py  main.py  mappers.py  query.py  routes.py
backend/api/models/: dto_models.py
backend/developer-resources/: load_gpkg_to_postgis.py  s3-csv-postgres-importer-config-map.yaml  s3-csv-postgres-importer-job.yaml  s3-csv-postgres-importer-secrets.yaml
backend/developer-resources/epc-backfill/infrastructure/: epc-backfill-config-map.yaml  epc-backfill-job.yaml  epc-backfill-secrets.yaml  epc-backfill-service-account.yaml
backend/k8s/api/overlays/dev/: params.env
backend/k8s/api/overlays/prod/: params.env
backend/k8s/api/overlays/staging/: params.env
backend/unit_tests/: query_response_mocks.py  test_building_flagging.py  test_building_retrieval.py  test_main.py  test_routes.py
custom_mappers/: one_off_mapper.py
developer_docs/: RUNNING_DEPLOYED.md
developer_resources/: .env-local  Dockerfile  docker-compose.yaml  generate_scram_password.py
docker/: Dockerfile  default.conf
frontend/: .eslintrc  .prettierignore  .prettierrc  SCI.md  angular.json  jest.config.ts  package-lock.json  package.json  (+2 more)
(+584 files in other folders)
