[project]
name = "iris-api"
version = "0.90.0"
description = "A Fast API that allows access to data required for the IRIS application"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (==0.135.1)",
    "mock (==5.2.0)",
    "pydantic (==2.12.5)",
    "pytest (==9.0.2)",
    "pytest-asyncio (==1.3.0)",
    "pytest-mock (==3.15.1)",
    "python-dotenv (==1.2.2)",
    "requests (==2.32.5)",
    "ruff (==0.15.4)",
    "starlette (==0.52.1)",
    "uvicorn (==0.41.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "geoalchemy2[shapely] (>=0.18.4,<0.19.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (==2.13.1)",
]
license = "Apache-2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
